--- a/sass/_page-media.sass
+++ b/sass/_page-media.sass
@@ -91,17 +91,37 @@
             transition: opacity 0.3s ease
             background: linear-gradient(0deg, rgba(1, 28, 26, 0.5), rgba(1, 28, 26, 0.5))
             opacity: 0
-        &:hover::after
-            opacity: 1
-            cursor: url("../assets/cursor/Open.png"), pointer
+            cursor: pointer
+        &::before
+            content: ""
+            position: absolute
+            top: 0
+            bottom: 20px
+            left: 0px
+            right: 40px
+            z-index: 5
+        &:hover
+            &::after
+                opacity: 1
+            &::before
+                cursor: url("../assets/cursor/Open.png"), pointer
 
-.page-media__video .page-media__item:hover:after
+.page-media__video .page-media__item:hover::before
     cursor: url("../assets/cursor/Play.png"), pointer
+.black .page-media__video .page-media__item:hover::before
+    cursor: url("../assets/cursor/Play-black.png"), pointer
+.red .page-media__video .page-media__item:hover::before
+    cursor: url("../assets/cursor/Play-red.png"), pointer
+.blue .page-media__video .page-media__item:hover::before
+    cursor: url("../assets/cursor/Play-blue.png"), pointer
 
 .black
     & .page-media
-        &__item:after
-            background: linear-gradient(0deg, rgba(195, 161, 149, 0.5), rgba(195, 161, 149, 0.5))
+        &__item
+            &:after
+                background: linear-gradient(0deg, rgba(195, 161, 149, 0.5), rgba(195, 161, 149, 0.5))
+            &:hover::before
+                cursor: url("../assets/cursor/Open-black.png"), pointer
         &__more
             background: linear-gradient(0deg, rgba(195, 161, 149, 0.5), rgba(195, 161, 149, 0.5))
             color: $blackSecondary
@@ -109,8 +129,11 @@
             color: $blackPrimary
 .red
     & .page-media
-        &__item:after
-            background: linear-gradient(0deg, rgba(51, 4, 13, 0.5), rgba(51, 4, 13, 0.5))
+        &__item
+            &:after
+                background: linear-gradient(0deg, rgba(51, 4, 13, 0.5), rgba(51, 4, 13, 0.5))
+            &:hover::before
+                cursor: url("../assets/cursor/Open-red.png"), pointer
         &__more
             background: linear-gradient(0deg, rgba(51, 4, 13, 0.5), rgba(51, 4, 13, 0.5))
             color: $redPrimary
@@ -118,8 +141,11 @@
             color: #000
 .blue
     & .page-media
-        &__item:after
-            background: linear-gradient(0deg, rgba(6, 32, 83, 0.49), rgba(6, 32, 83, 0.49))
+        &__item
+            &:after
+                background: linear-gradient(0deg, rgba(6, 32, 83, 0.49), rgba(6, 32, 83, 0.49))
+            &:hover::before
+                cursor: url("../assets/cursor/Open-blue.png"), pointer
         &__more
             background: linear-gradient(0deg, rgba(6, 32, 83, 0.49), rgba(6, 32, 83, 0.49))
             color: $bluePrimary
