--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -121,7 +121,7 @@
     right: 0
     z-index: -1
     width: 100%
-    display: none
+    visibility: hidden
 
 @media screen and (max-width: 1023px)
     .footer
