--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -122,9 +122,8 @@ body
     &.blue
         background: #031333 !important
         transition: background 0s
-.displaing
-    display: block !important
-
+.visible
+    visibility: visible !important
 .input__wrapper
     max-width: 414px
     margin: auto
