--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -17,6 +17,7 @@
     display: none
     opacity: 0
     transition: opacity 0.3s ease
+    overflow-y: scroll
     &__container
         max-width: 906px
     &__hero
@@ -86,7 +87,7 @@
 @media screen and (max-width: 600px)
     .modal
         &__container
-            padding: 0
+            padding: 15px
         &__hero
             padding: 15px 17px 15px 35px
 @media screen and (max-width: 424px)
