--- a/sass/_page-media.sass
+++ b/sass/_page-media.sass
@@ -1,6 +1,10 @@
 .page-media
     background: #fff
     padding-bottom: 115px
+    opacity: 0
+    transition: opacity 0.6s ease-in
+    &.anim-active
+        opacity: 1
     &__hero
         max-width: 1440px
         margin: auto
