--- a/sass/_page-rested.sass
+++ b/sass/_page-rested.sass
@@ -12,7 +12,7 @@
         text-align: left
         color: $classicPrimary
     &__subtitle
-        font-family: 'Calvino Grande'
+        font-family: 'Calvino'
         font-weight: 600
         font-size: 40px
         line-height: 130%
