--- a/sass/_creation-page-main.sass
+++ b/sass/_creation-page-main.sass
@@ -30,6 +30,10 @@
         & p
             text-align: center
             font-size: 14px
+        & img
+            width: 100%
+    &__file-input
+        display: none
     &__date-wrap
         display: flex
         flex-direction: row
