--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -160,7 +160,9 @@ body
     margin-bottom: 8px
 .page-hero-paddings
     padding: 0 80px
-
+.d-none
+    display: none !important
+    
 @media screen and (max-width: 800px)
     .page-hero-paddings
         padding: 0 40px
