--- a/sass/_creation-page-refs-remembers.sass
+++ b/sass/_creation-page-refs-remembers.sass
@@ -8,7 +8,6 @@
         font-size: 14px
         color: $primary
         text-align: center
-        margin-bottom: 30px
         opacity: 0.8
     &__btn
         margin: auto
@@ -17,12 +16,13 @@
         padding: 11.5px 30px
         margin-top: 30px
         min-width: 170px
+    &__parent
+        margin-top: 30px
 
 .creation-memories
     &__text
         font-family: 'Grafita Special'
         text-align: center
-        margin-bottom: 30px
         padding: 0 50px
     &__add-text
         max-width: 414px
@@ -42,6 +42,8 @@
         padding: 11.5px 30px
         margin-top: 30px
         min-width: 170px
+    &__parent
+        margin-top: 30px
 
 @media screen and (max-width: 767px)
     .creation-refs
