--- a/sass/_modal.sass
+++ b/sass/_modal.sass
@@ -87,8 +87,9 @@
         overflow: hidden
     &__img-wrapper
         background-color: rgba(0, 0, 0, 0.6)
-        max-height: 100%
-        overflow: hidden
+        position: relative
+        width: 100%
+        max-height: 500px
         & img
             margin: auto
             display: block
