--- a/style/style.css
+++ b/style/style.css
@@ -883,8 +883,9 @@ body {
 
 .crop-modal__img-wrapper {
   background-color: rgba(0, 0, 0, 0.6);
-  max-height: 100%;
-  overflow: hidden;
+  position: relative;
+  width: 100%;
+  max-height: 500px;
 }
 
 .crop-modal__img-wrapper img {
@@ -1607,7 +1608,6 @@ input[type="radio"]:checked::after {
   font-size: 14px;
   color: #C69A39;
   text-align: center;
-  margin-bottom: 30px;
   opacity: 0.8;
 }
 
@@ -1624,10 +1624,13 @@ input[type="radio"]:checked::after {
   min-width: 170px;
 }
 
+.creation-refs__parent {
+  margin-top: 30px;
+}
+
 .creation-memories__text {
   font-family: 'Grafita Special';
   text-align: center;
-  margin-bottom: 30px;
   padding: 0 50px;
 }
 
@@ -1661,6 +1664,10 @@ input[type="radio"]:checked::after {
   padding: 11.5px 30px;
   margin-top: 30px;
   min-width: 170px;
+}
+
+.creation-memories__parent {
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 767px) {
