--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -30,7 +30,10 @@ a
     color: $text-color
 textarea
     resize: vertical
-body
+// body
+//     transition: background 0.3s linear
+
+.transition-3
     transition: background 0.3s linear
 
 .container
@@ -162,6 +165,8 @@ body
     padding: 0 80px
 .d-none
     display: none !important
+.onTop
+    z-index: 10 !important
     
 @media screen and (max-width: 800px)
     .page-hero-paddings
