--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@ textarea {
   resize: vertical;
 }
 
-body {
+.transition-3 {
   -webkit-transition: background 0.3s linear;
   transition: background 0.3s linear;
 }
@@ -284,6 +284,10 @@ body {
 
 .d-none {
   display: none !important;
+}
+
+.onTop {
+  z-index: 10 !important;
 }
 
 @media screen and (max-width: 800px) {
@@ -1857,8 +1861,6 @@ input[type="radio"]:checked::after {
   background: #011C1A;
   padding: 0 20px;
   text-align: center;
-  -webkit-transition: background 0.3s linear;
-  transition: background 0.3s linear;
 }
 
 .page-head__name-wrapper {
