--- a/sass/_page-biography.sass
+++ b/sass/_page-biography.sass
@@ -180,6 +180,7 @@
 @media screen and (max-width: 767px)
     .page-biography
         padding: 100px 0
+        padding-top: 0
         &__main-text
             font-size: 16px
         &__item
